# fluid-simulation

./: .gitignore  CMakeLists.txt  collisionGrid.hpp  main.cpp  renderer.hpp  solver.hpp  verlet.hpp
utils/: colors.hpp
